Fix card overlap when back side shown (#83)

--- a/css/cards.css
+++ b/css/cards.css
@@ -79,7 +79,6 @@
 .deal-card.back {
     background-color: #0055aa;
     color: transparent;
-    position: relative;
 }
 
 .playing-card.back::after,
